# PasswordManager

./: .gitattributes  .gitignore  Cargo.toml  README.md
.claude/skills/: README.md
.claude/skills/_shared/: lib.sh
.claude/skills/adr-integrity/: SKILL.md
.claude/skills/adr-integrity/scripts/: collect.sh
.claude/skills/audit-all/: SKILL.md
.claude/skills/claims-vs-code/: SKILL.md
.claude/skills/claims-vs-code/scripts/: collect.sh
.claude/skills/crypto-boundary/: SKILL.md
.claude/skills/crypto-boundary/scripts/: collect.sh
.claude/skills/secret-hygiene/: SKILL.md
.claude/skills/secret-hygiene/scripts/: collect.sh
.claude/skills/sync-invariants/: SKILL.md
.claude/skills/sync-invariants/scripts/: collect.sh
.claude/skills/zeroize-audit/: SKILL.md
.claude/skills/zeroize-audit/scripts/: collect.sh
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  prompt.rs
cli/tests/: cli_test.rs
core/: Cargo.toml
core/src/: api.rs  b64.rs  crypto.rs  error.rs  lib.rs  local.rs  model.rs  remote.rs  storage.rs  sync.rs  vault.rs
core/tests/: sync_test.rs  vault_test.rs
docs/adr/: 0001-kdf-argon2id-params.md  0002-aead-xchacha20poly1305.md  0003-nonce-strategy.md  0004-password-verification-key-check.md  0005-aad-binding.md  0006-sync-conflict-policy.md  0007-access-layer.md  0008-browser-extension.md  0009-extension-autofill-and-save.md
extension/: build.ps1  manifest.json  offscreen.html  options.html  package.json  popup.html
extension/src/: background.js  offscreen.js  options.js  popup.js  psl.js  rank.js  savepolicy.js  version.js
extension/src/content/: banner.js  detect.js  dropdown.js  main.js
extension/test/: detect.test.js  psl.test.js  rank.test.js  savepolicy.test.js  version.test.js
extension/test/manual/: login-server.mjs
ops/: README.md  funnel-control.ps1  oauth2-proxy.cfg  resources.json  serve-public.ps1  serve-tailnet.ps1  vault-console.ps1
server/: Cargo.toml
server/src/: app.rs  db.rs  lib.rs  main.rs  oidc.rs
server/tests/: server_test.rs
vaultctl/: Cargo.toml
vaultctl/src/: config.rs  main.rs  secrets.rs  sys.rs  tscale.rs
web/: Cargo.toml
web/src/: lib.rs
web/static/: app.js  index.html  worker.js
