[package]
name = "password-manager-cli"
description = "Command line client for PasswordManager"
version.workspace = true
edition.workspace = true

[[bin]]
name = "password-manager"
path = "src/main.rs"

[dependencies]
password-manager-core = { path = "../core", features = ["remote"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
rpassword = "7"
subtle = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
zeroize = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
