[package]
name = "password-manager-core"
description = "Core crypto, data model, and storage abstraction for PasswordManager"
version.workspace = true
edition.workspace = true

[features]
default = ["sqlite"]
# LocalSqlite backend. Off for wasm32 builds.
sqlite = ["dep:rusqlite"]
# RemoteSync backend over HTTP. Off for wasm32 builds; the web client talks
# to the server through the browser's fetch instead.
remote = ["dep:reqwest"]

[dependencies]
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
getrandom = "0.2"
subtle = "2"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.10"
uuid = { version = "1", features = ["serde", "v5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"], optional = true }

[dev-dependencies]
hex = "0.4"
tempfile = "3"
