[package]
name = "vaultctl"
description = "Lifecycle control for the PasswordManager vault: tailnet serve, the Google gate, and the funnel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vaultctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
