[package]
name = "password-manager-web"
description = "Browser client for PasswordManager: the same core crypto compiled to wasm32"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Crypto and models only: no sqlite, no HTTP client. The page fetches
# ciphertext with the browser's fetch and hands it to this module.
password-manager-core = { path = "../core", default-features = false }
# The "js" feature routes the OS RNG to the browser's crypto.getRandomValues.
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned: the wasm-bindgen-cli that generates web/static/pkg must match
# this version exactly.
wasm-bindgen = "=0.2.126"
